--- a/Security/Guidelines/Jenkins.mediawiki
+++ b/Security/Guidelines/Jenkins.mediawiki
@@ -25,7 +25,7 @@ Additional configuration is required on the server instance to control the vario
 === Sensitive Path Restrictions ===
 There are a number of known URL paths that expose attack surface on a Jenkins installation that you may not want, but are not often configurable within the application.  Depending on your specific use case of Jenkins, you may choose to block one or more of these paths to reduce this attack surface, which are commonly used by attackers to exploit configuration flaws and/or gather information that could be later used to assist in other types of attacks.
 
-Please note that the following paths are relative to the Jenkins application root.  So if you're Jenkins installation is reachable at /jenkins instead of the default /, you may need to make substitutions accordingly:
+Please note that the following paths are relative to the Jenkins application root.  So if the Jenkins installation is reachable at /jenkins instead of the default /, you may need to make substitutions accordingly:
 
   ./script
   ./view/All/newJob
@@ -40,7 +40,9 @@ Please note that the following paths are relative to the Jenkins application roo
   ./credential-store
   ./job/[job_name]/[build_number]/injectedEnvVars/
 
-Such path restrictions can be implemented in any modern web server technology.  For example, this is how you can perform such path restrictions in nginx using the location directive:
+Such path restrictions can be implemented in any modern web server technology.
+
+nginx Example:
 
   # Restrict access to the following paths
   location ^~ /(api|restart|quietDown|user/jenkins|jnlpJars|script|asynchPeople|credential-store|systemInfo|view/All/newJob) {
@@ -50,6 +52,17 @@ Such path restrictions can be implemented in any modern web server technology.  
   location ~* ^.+/injectedEnvVars/$ {
     deny    all;
   }
+
+Apache HTTPD Example:
+
+  # Restrict access to the following paths
+  <DirectoryMatch "^/(api|restart|quietDown|user/jenkins|jnlpJars|script|asynchPeople|credential-store|systemInfo|view/All/newJob)">
+    Deny from all
+  </DirectoryMatch>
+  # Restrict access to injectedEnvVars paths
+  <DirectoryMatch "^.+/injectedEnvVars/$">
+    Deny from all
+  </DirectoryMatch>
 
 It is recommended that you start with the full list of restricted paths and then remove restrictions as necessary to fit your desired use case.  Additionally, you may also consider restricting some paths by source IP to provide additional paths for users sourcing from specific source networks, such as those originating from an internal/VPN network.
 
