Add SSH tunneling

--- a/Security/Guidelines/Jenkins.mediawiki
+++ b/Security/Guidelines/Jenkins.mediawiki
@@ -20,7 +20,7 @@ Changes are detailed in the [https://github.com/mozilla/wikimo_opsec/commits/mas
 === Transport Encryption ===
 By default, the Jenkins web administration console is served over HTTP.  This allows a MiTM attacker to steal Jenkins administrative credentials.  To combat this, all Jenkins web applications should be served over HTTPS using a certificate from a trusted certificate authority.  If purchasing an certificate is deemed cost prohibitive, certificates can be obtained **FREE** from [https://letsencrypt.org/ Let's Encrypt].
 
-Additional configuration is required on the server instance to control the various TLS configuration settings that the Jenkins instance will support.  Any new Jenkins installations should implement a MODERN TLS configuration, as defined by the [https://wiki.mozilla.org/Security/Server_Side_TLS Mozilla Server Side TLS guide].  Mozilla also provides an [https://mozilla.github.io/server-side-tls/ssl-config-generator/ SSL configuration generator] to assist you in building of a MODERN configuration for your chosen web server to host Jenkins with.
+Additional configuration is required on the server instance to control the various TLS configuration settings that the Jenkins instance will support.  Any Jenkins installations should implement a MODERN TLS configuration, as defined by the [https://wiki.mozilla.org/Security/Server_Side_TLS Mozilla Server Side TLS guide].  Mozilla also provides an [https://mozilla.github.io/server-side-tls/ssl-config-generator/ SSL configuration generator] to assist you in building of a MODERN configuration for your chosen web server to host Jenkins with.
 
 === Sensitive Path Restrictions ===
 There are a number of known URL paths that expose attack surface on a Jenkins installation that you may not want, but are not often configurable within the application.  Depending on your specific use case of Jenkins, you may choose to block one or more of these paths to reduce this attack surface, which are commonly used by attackers to exploit configuration flaws and/or gather information that could be later used to assist in other types of attacks.
@@ -76,10 +76,22 @@ It is recommended that you start with the full list of restricted paths and then
 *TODO* - enable this out of the box
 
 == SSH ==
+
+=== Authentication ===
+All remote authentication to a Jenkins SSH service should be restricted to no less than SSH key-based authentication or dual-factor authentication where possible, as defined in the [https://wiki.mozilla.org/Security/Guidelines/OpenSSH Mozilla OpenSSH Guide].
+
 === Transport Encryption ===
-*TODO* - Basically, see OpenSSH guidelines (use key auth)
+Default OpenSSH configurations tend to provide reasonably good transport encryption security.  However, there is still room to further lock down a Jenkins openssh configuration and incentive to do so considering the critical functions and secrets we trust Jenkins with.
+
+Any Jenkins installations should implement a MODERN OpenSSH Server configuration, as defined in the [https://wiki.mozilla.org/Security/Guidelines/OpenSSH Mozilla OpenSSH Guide].  Additionally, any SSH clients (likely developer workstations) connecting to the SSH server on Jenkins installations should implement a MODERN OpenSSH client configuration, also documented in the [https://wiki.mozilla.org/Security/Guidelines/OpenSSH Mozilla OpenSSH Guide].
+
 === Tunneling ===
-*TODO* - Have users tunnel their traffic for sensitive paths
+SSH tunneling can be used in a couple different instances to limit attack surface on your Jenkins installation.  This is often done in a couple of scenarios.
+
+* To provide access to Jenkins installation paths that are bound to a routable IP, which present a limited HTTP attack surface, except to users which have already authenticated to the SSH service.
+* To provide connectivity to Jenkins installations that are bound to the loopback interface on the service, which present no HTTP attack surface, except to users which have already authenticated to the SSH service.
+
+
 
 == Architecture ==
 *TODO* - Discuss the trust model in Jenkins a bit further
@@ -89,6 +101,7 @@ It is recommended that you start with the full list of restricted paths and then
 *TODO* - Don't run anything on the master node, use slaves and containers for better OS isolation and repeatability
 === Secret Management ===
 *TODO*
+
 
 == Maintenance ==
 === Advisory Notification ===
