Small tweaks to jenkins config

--- a/Security/Guidelines/Jenkins.mediawiki
+++ b/Security/Guidelines/Jenkins.mediawiki
@@ -67,7 +67,7 @@ Apache HTTPD Example:
 It is recommended that you start with the full list of restricted paths and then remove restrictions as necessary to fit your desired use case.  Additionally, you may also consider restricting some paths by source IP to provide additional paths for users sourcing from specific source networks, such as those originating from an internal/VPN network.
 
 === Password Masking ===
-In the configuration of a Jenkins job, you may have a need to supply a password/api key.  In these cases, it's recommended that under the "Build Environment" section that these environment variables be introduced via the "Inject passwords to the build as environment variables" section and not the "Inject environment variables to the build process".  As part of this subsection of the configuration, there is an additional checkbox called "Mask password parameters", which should be checked to ensure that these values are not leaked (plain-text -or- cipher-text) via the ./job/[job_name]/[build_number]/injectedEnvVars/ path pattern.
+In the configuration of a Jenkins job, you may have a need to supply a password/api key.  In these cases, it's recommended that under the "Build Environment" section that these environment variables be introduced via the "Inject passwords to the build as environment variables" section and not the "Inject environment variables to the build process" section.  As part of this subsection of the configuration, there is an additional checkbox called "Mask password parameters", which should be checked to ensure that these values are not leaked (plain-text -or- cipher-text) via the ./job/[job_name]/[build_number]/injectedEnvVars/ path pattern.
 
 See the above section on "Sensitive Path Restrictions" to limit the impact should a Jenkins user accidentally uncheck password masking for any reason.
 
