--- a/Security/Guidelines/Web_Security.mediawiki
+++ b/Security/Guidelines/Web_Security.mediawiki
@@ -1,27 +1,191 @@
+__NOTOC__
 <div style="max-width: 75em;">
-<table>
-  <tr>
-    <td style="white-space: nowrap;">__TOC__</td>
-    <td style="vertical-align: top; padding-left: 1em;">The goal of this document is to help operational teams with creating secure web applications. All Mozilla sites and deployments are expected to follow the recommendations below.
+  <table>
+    <tr>
+      <td style="white-space: nowrap;">
+        <!-- Roll our own TOC, since the wiki has very old styles -->
+        <div id="toc" class="toc">
+          <div id="toctitle">
+            <h2>Contents</h2>
+          </div>
+          <ul style="padding-right: 1em;">
+            <li>[[#Web Security Cheat Sheet|1 Cheat Sheet]]
+            <li>[[#Transport Layer Security|2 Transport Layer Security]]
+            <li>
+              <ul>
+                <li>[[#HTTPS|2.1 HTTPS]]</li>
+                <li>[[#HTTP Strict Transport Security|2.2 HTTP Strict Transport Security]]</li>
+                <li>[[#HTTP Redirections|2.3 HTTP Redirections]]</li>
+                <li>[[#HTTP Public Key Pinning|2.4 HTTP Public Key Pinning]]</li>
+                <li>[[#Resource Loading|2.5 Resource Loading]]</li>
+              </ul>
+            </li>
+            <li>[[#Content Security Policy|3 Content Security Policy]]</li>
+            <li>[[#contribute.json|4 contribute.json]]</li>
+            <li>[[#Cookies|5 Cookies]]</li>
+            <li>[[#Cross-origin Resource Sharing|6 Cross-origin Resource Sharing]]</li>
+            <li>[[#CSRF Prevention|7 CSRF Prevention]]</li>
+            <li>[[#robots.txt|8 robots.txt]]</li>
+            <li>[[#Subresource Integrity|9 Subresource Integrity]]</li>
+            <li>[[#X-Content-Type-Options|10 X-Content-Type-Options]]</li>
+            <li>[[#X-Frame-Options|11 X-Frame-Options]]</li>
+            <li>[[#X-XSS-Protection|12 X-XSS-Protection]]</li>
+            <li>[[#Version History|13 Version History]]</li>
+          </ul>
+        </div>
+      </td>
+      <td style="vertical-align: top; padding: 1.5em 1em 0 1.5em;">
+The goal of this document is to help operational teams with creating secure web applications. All Mozilla sites and deployments are expected to follow the recommendations below. Use of these recommendations by the public is strongly encouraged.
 
 The Enterprise Information Security (EIS) team maintains this document as a reference guide to navigate the rapidly changing landscape of web security. Changes are reviewed and merged by the OpSec team, and broadcast to the various Operational teams.
 
 Updates to this page should be submitted to the [https://github.com/mozilla/wikimo_opsec source repository on github].
-    </td>
-  </tr>
-</table>
+      </td>
+    </tr>
+  </table>
+</div>
 
+
+= Web Security Cheat Sheet =
+
+{| class="wikitable sortable" style="width: 100%;"
+|-
+! data-sort-type="number" | Guideline
+! Impact
+! Difficulty
+! data-sort-type="number" | Order<sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&dagger;</sup>
+! Requirements
+! Notes
+|- style="background-color: #9EDB58;"
+| data-sort-value="1" | [[#HTTPS|<span style="color: black;">HTTPS</span>]]
+| style="text-align: center;" | P1
+| style="text-align: center;" | Easy
+| style="text-align: center;" data-sort-value="0" | 
+| Mandatory
+| Sites should use HTTPS (or other secure protocols) for all communications
+|- style="background-color: #E99696;"
+| data-sort-value="2" style="padding-left: 1.5em;" | [[#HTTP Public Key Pinning|<span style="color: black;">Public Key Pinning</span>]]
+| style="text-align: center;" | P5
+| style="text-align: center;" | High
+| style="text-align: center;" data-sort-value="99" | --
+| Mandatory for maximum risk sites only
+| Not recommended for most sites
+|- style="background-color: #9EDB58;"
+| data-sort-value="3" style="padding-left: 1.5em;" | [[#HTTP Redirections|<span style="color: black;">Redirections from HTTP</span>]]
+| style="text-align: center;" | P1
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 3
+| Mandatory
+| Websites must redirect to HTTPS, API endpoints should disable HTTP entirely
+|- style="background-color: #9EDB58;"
+| data-sort-value="4" style="padding-left: 1.5em;" | [[#Resource Loading|<span style="color: black;">Resource Loading</span>]]
+| style="text-align: center;" | P1
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 2
+| Mandatory for all websites
+| Both passive and active resources should be loaded through protocols using TLS, such as HTTPS
+|- style="background-color: #9EDB58;"
+| data-sort-value="5" style="padding-left: 1.5em;" | [[#HTTP Strict Transport Security|<span style="color: black;">Strict Transport Security</span>]]
+| style="text-align: center;" | P1
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 4
+| Mandatory for all websites
+| Minimum allowed time period of six months
+|- style="background-color: #9EDB58;"
+| data-sort-value="6" style="padding-left: 1.5em;" | [[#HTTPS|<span style="color: black;">TLS Configuration</span>]]
+| style="text-align: center;" | P1
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 1
+| Mandatory
+| Use the most secure Mozilla TLS configuration for your user base, typically [[Security/Server Side TLS#Intermediate compatibility (default)|Intermediate]]
+|- style="background-color: #E8E27A;"
+| data-sort-value="7" | [[#Content Security Policy|<span style="color: black;">Content Security Policy</span>]]
+| style="text-align: center;" | P2
+| style="text-align: center;" | High
+| style="text-align: center;" | 10
+| Mandatory for new websites<br>Recommended for existing websites
+| Disabling inline script is the greatest concern for CSP implementation
+|- style="background-color: #9EDB58;"
+| data-sort-value="8" | [[#Cookies|<span style="color: black;">Cookies</span>]]
+| style="text-align: center;" | P3
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 7
+| Mandatory for all new websites<br>Recommended for existing websites
+| All cookies must be set with the Secure flag, and set as restrictively as possible
+|- style="background-color: #D2D2D2;"
+| data-sort-value="9" | [[#contribute.json|<span style="color: black;">contribute.json</span>]]
+| style="text-align: center;" | P4
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 9
+| Mandatory for all new Mozilla websites<br>Recommended for existing Mozilla sites
+| Mozilla sites should serve contribute.json and keep contact information up-to-date
+|- style="background-color: #9EDB58;"
+| data-sort-value="10" | [[#Cross-origin Resource Sharing|<span style="color: black;">Cross-origin Resource Sharing</span>]]
+| style="text-align: center;" | P3
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 11
+| Mandatory
+| Origin sharing headers and files should not be present, except for specific use cases
+|- style="background-color: #D2D2D2;"
+| data-sort-value="11" | [[#CSRF Prevention|<span style="color: black;">Cross-site Request Forgery Tokenization</span>]]
+| style="text-align: center;" | P2
+| style="text-align: center;" | Varies
+| style="text-align: center;" | 6
+| Varies
+| Mandatory for websites that allow destructive changes<br>Unnecessary for all other websites<br>Most application frameworks have built-in CSRF tokenization to ease implementation
+|- style="background-color: #D2D2D2;"
+| data-sort-value="12" | [[#robots.txt|<span style="color: black;">robots.txt</span>]]
+| style="text-align: center;" | P5
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 13
+| Optional
+| Websites that implement robots.txt must use it only for noted purposes
+|- style="background-color: #E8E27A;"
+| data-sort-value="13" | [[#Subresource Integrity|<span style="color: black;">Subresource Integrity</span>]]
+| style="text-align: center;" | P5
+| style="text-align: center;" | Moderate
+| style="text-align: center;" | 14
+| Recommended<sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&Dagger;</sup>
+| <sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&Dagger;</sup> Only for websites that load JavaScript or stylesheets from foreign origins
+|- style="background-color: #E8E27A;"
+| data-sort-value="14" | [[#X-Content-Type-Options|<span style="color: black;">X-Content-Type-Options</span>]]
+| style="text-align: center;" | P3
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 8
+| Recommended for all websites
+| Websites should verify that they are setting the proper MIME types for all resources
+|- style="background-color: #9EDB58;"
+| data-sort-value="15" | [[#X-Frame-Options|<span style="color: black;">X-Frame-Options</span>]]
+| style="text-align: center;" | P2
+| style="text-align: center;" | Easy
+| style="text-align: center;" | 5
+| Mandatory for all websites
+| Websites that don't use DENY or SAMEORIGIN must employ clickjacking defenses
+|- style="background-color: #E8E27A;"
+| data-sort-value="16" | [[#X-XSS-Protection|<span style="color: black;">X-XSS-Protection</span>]]
+| style="text-align: center;" | P4
+| style="text-align: center;" | Moderate
+| style="text-align: center;" | 12
+| Mandatory for all new websites<br>Recommended for existing websites
+| Manual testing should be done for existing websites, prior to implementation
+|}
+
+<div style="margin-left: 1.5em;"><sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&dagger;</sup> Suggested order that administrators implement the web security guidelines. It is based on a combination of the security impact and the ease of implementation from an operational and developmental perspective.</div>
+
+
+
+<div style="max-width: 75em;">
 = Transport Layer Security =
 
 == HTTPS ==
 
-Transport Layer Security (TLS/SSL) provides assurances about the confidentiality, authentication, and integrity of all communications both inside and outside of Mozilla. To protect our users and networked systems, all systems must use encrypted TLS connections for their network communications.  Support and use of TLS is mandatory for all new systems, and existing systems are expected to add support for exclusive TLS as soon as possible.
+Transport Layer Security (TLS/SSL) provides assurances about the confidentiality, authentication, and integrity of all communications both inside and outside of Mozilla. To protect our users and networked systems, the support and use of encrypted communications using TLS is mandatory for all systems.
 
 Websites or API endpoints that only communicate with modern browsers and systems should use the [[Security/Server Side TLS#Modern compatibility|Mozilla modern TLS configuration]].
 
 Websites intended for general public consumption should use the [[Security/Server Side TLS#Intermediate compatibility (default)|Mozilla intermediate TLS configuration]].
 
-Websites that require backwards compatibility with extremely old browsers may use the [[Security/Server Side TLS#Old backward compatibility|Mozilla backwards compatible TLS configuration]]. Very few sites should require this compatibility level, and use of this compatibility level should be noted in your risk assessment.
+Websites that require backwards compatibility with extremely old browsers and operating systems may use the [[Security/Server Side TLS#Old backward compatibility|Mozilla backwards compatible TLS configuration]]. This is not recommended, and use of this compatibility level should be noted in your risk assessment.
 
 === Compatibility ===
 
@@ -59,7 +223,7 @@ The header consists of one mandatory parameter (<tt>max-age</tt>) and two option
 * <tt>includeSubDomains:</tt> whether user agents should upgrade requests on subdomains
 * <tt>preload:</tt> whether the site should be included in the [https://hstspreload.appspot.com/ HSTS preload list]
 
-<tt>max-age</tt> must be set to a minimum of six months (15768000), but longer periods such as one year (31536000) or longer are also acceptable.  Note that once this value is set, the site must continue to support HTTPS until the expiry time has been reached.
+<tt>max-age</tt> must be set to a minimum of six months (15768000), but longer periods such as one year (31536000) or longer are recommended.  Note that once this value is set, the site must continue to support HTTPS until the expiry time has been reached.
 
 <tt>includeSubDomains</tt> notifies the browser that all subdomains of the current origin should also be upgraded via HSTS.  For example, setting <tt>includeSubDomains</tt> on <tt>domain.mozilla.com</tt> will also set it on <tt>host1.domain.mozilla.com</tt> and <tt>host2.domain.mozilla.com</tt>. Extreme care is needed when setting the <tt>includeSubDomains</tt> flag, as it could disable sites on subdomains that don't yet have HTTPS enabled.
 
@@ -67,8 +231,8 @@ The header consists of one mandatory parameter (<tt>max-age</tt>) and two option
 
 === Examples ===
 
-<pre># Only connect to this site via HTTPS for the next six months
-Strict-Transport-Security: max-age=15768000</pre>
+<pre># Only connect to this site via HTTPS for the next year (recommended)
+Strict-Transport-Security: max-age=31536000</pre>
 
 <pre># Only connect to this site and subdomains via HTTPS for the next year and also include in the preload list
 Strict-Transport-Security: max-age=31536000; includeSubDomains; preload</pre>
@@ -87,15 +251,14 @@ Redirections should be done with the 301 redirects, unless they redirect to a di
 
 === Examples ===
 
-<pre># Redirect from http to https with nginx
+<pre># Redirect all incoming http requests to the same site and URI on https, using nginx
 server {
   listen 80;
-  server_name site.mozilla.org;
 
-  return 301 https://$server_name$request_uri;
+  return 301 https://$host$request_uri;
 }</pre>
 
-<pre># Redirect from http to https with Apache
+<pre># Redirect for site.mozilla.org from http to https, using Apache
 <VirtualHost *:80>
   ServerName site.mozilla.org
   Redirect permanent / https://site.mozilla.org/
@@ -104,7 +267,7 @@ server {
 
 == HTTP Public Key Pinning ==
 
-Maximum risk sites must enable the use of HTTP Public Key Pinning (HPKP). HPKP instructs a user agent to bind a site to specific root certificate authority, intermediate certificate authority, or end-entity public key. This prevents  certificate authorities from issuing unauthorized certificates for a given domain that would nevertheless be trusted by the browsers. These fradulent certificates would allow an active attacker to MitM and impersonate a website, intercepting credentials and other sensitive data.
+[[Security/Risk management/Rapid Risk Assessment#RRA Risk table (5-10 minutes)|Maximum risk]] sites must enable the use of HTTP Public Key Pinning (HPKP). HPKP instructs a user agent to bind a site to specific root certificate authority, intermediate certificate authority, or end-entity public key. This prevents  certificate authorities from issuing unauthorized certificates for a given domain that would nevertheless be trusted by the browsers. These fradulent certificates would allow an active attacker to MitM and impersonate a website, intercepting credentials and other sensitive data.
 
 Due to the risk of knocking yourself off the internet, HPKP must be implemented with extreme care. This includes having backup key pins, testing on a non-production domain, testing with <tt>Public-Key-Pins-Report-Only</tt> and then finally doing initial testing with a very short-lived <tt>max-age</tt> directive. Because of the risk of creating a self-denial-of-service and the very low risk of a fraudulent certificate being issued, it is <em>not recommended</em> for the majority websites to implement HPKP.
 
@@ -484,131 +647,3 @@ X-XSS-Protection: 1; mode=block</pre>
 | align="center" | April
 | Initial document creation
 |}
-
-
-
-= Web Security Cheat Sheet =
-
-{| class="wikitable sortable" style="width: 100%;"
-|-
-! data-sort-type="number" | Guideline
-! Impact
-! Difficulty
-! data-sort-type="number" | Order<sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&dagger;</sup>
-! Requirements
-! Notes
-|- style="background-color: #9EDB58;"
-| data-sort-value="1" | [[#HTTPS|<span style="color: black;">HTTPS</span>]]
-| style="text-align: center;" | P1
-| style="text-align: center;" | Easy
-| style="text-align: center;" data-sort-value="0" | 
-| Mandatory
-| Sites should use HTTPS (or other secure protocols) for all communications
-|- style="background-color: #E99696;"
-| data-sort-value="2" style="padding-left: 1.5em;" | [[#HTTP Public Key Pinning|<span style="color: black;">Public Key Pinning</span>]]
-| style="text-align: center;" | P5
-| style="text-align: center;" | High
-| style="text-align: center;" data-sort-value="99" | --
-| Mandatory for maximum risk sites only
-| Not recommended for most sites
-|- style="background-color: #9EDB58;"
-| data-sort-value="3" style="padding-left: 1.5em;" | [[#HTTP Redirections|<span style="color: black;">Redirections from HTTP</span>]]
-| style="text-align: center;" | P1
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 3
-| Mandatory
-| Websites must redirect to HTTPS, API endpoints should disable HTTP entirely
-|- style="background-color: #9EDB58;"
-| data-sort-value="4" style="padding-left: 1.5em;" | [[#Resource Loading|<span style="color: black;">Resource Loading</span>]]
-| style="text-align: center;" | P1
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 2
-| Mandatory for all websites
-| Both passive and active resources should be loaded through protocols using TLS, such as HTTPS
-|- style="background-color: #9EDB58;"
-| data-sort-value="5" style="padding-left: 1.5em;" | [[#HTTP Strict Transport Security|<span style="color: black;">Strict Transport Security</span>]]
-| style="text-align: center;" | P1
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 4
-| Mandatory for all websites
-| Minimum allowed time period of six months
-|- style="background-color: #9EDB58;"
-| data-sort-value="6" style="padding-left: 1.5em;" | [[#HTTPS|<span style="color: black;">TLS Configuration</span>]]
-| style="text-align: center;" | P1
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 1
-| Mandatory
-| Use the most secure Mozilla TLS configuration for your user base, typically [[Security/Server Side TLS#Intermediate compatibility (default)|Intermediate]]
-|- style="background-color: #E8E27A;"
-| data-sort-value="7" | [[#Content Security Policy|<span style="color: black;">Content Security Policy</span>]]
-| style="text-align: center;" | P2
-| style="text-align: center;" | High
-| style="text-align: center;" | 10
-| Mandatory for new websites<br>Recommended for existing websites
-| Disabling inline script is the greatest concern for CSP implementation
-|- style="background-color: #9EDB58;"
-| data-sort-value="8" | [[#Cookies|<span style="color: black;">Cookies</span>]]
-| style="text-align: center;" | P3
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 7
-| Mandatory for all new websites<br>Recommended for existing websites
-| All cookies must be set with the Secure flag, and set as restrictively as possible
-|- style="background-color: #D2D2D2;"
-| data-sort-value="9" | [[#contribute.json|<span style="color: black;">contribute.json</span>]]
-| style="text-align: center;" | P4
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 9
-| Mandatory for all new Mozilla websites<br>Recommended for existing Mozilla sites
-| Mozilla sites should serve contribute.json and keep contact information up-to-date
-|- style="background-color: #9EDB58;"
-| data-sort-value="10" | [[#Cross-origin Resource Sharing|<span style="color: black;">Cross-origin Resource Sharing</span>]]
-| style="text-align: center;" | P3
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 11
-| Mandatory
-| Origin sharing headers and files should not be present, except for specific use cases
-|- style="background-color: #D2D2D2;"
-| data-sort-value="11" | [[#CSRF Prevention|<span style="color: black;">Cross-site Request Forgery Tokenization</span>]]
-| style="text-align: center;" | P2
-| style="text-align: center;" | Varies
-| style="text-align: center;" | 6
-| Varies
-| Mandatory for websites that allow destructive changes<br>Unnecessary for all other websites<br>Most application frameworks have built-in CSRF tokenization to ease implementation
-|- style="background-color: #D2D2D2;"
-| data-sort-value="12" | [[#robots.txt|<span style="color: black;">robots.txt</span>]]
-| style="text-align: center;" | P5
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 13
-| Optional
-| Websites that implement robots.txt must use it only for noted purposes
-|- style="background-color: #E8E27A;"
-| data-sort-value="13" | [[#Subresource Integrity|<span style="color: black;">Subresource Integrity</span>]]
-| style="text-align: center;" | P5
-| style="text-align: center;" | Moderate
-| style="text-align: center;" | 14
-| Recommended<sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&Dagger;</sup>
-| <sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&Dagger;</sup> Only for websites that load JavaScript or stylesheets from foreign origins
-|- style="background-color: #E8E27A;"
-| data-sort-value="14" | [[#X-Content-Type-Options|<span style="color: black;">X-Content-Type-Options</span>]]
-| style="text-align: center;" | P3
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 8
-| Recommended for all websites
-| Websites should verify that they are setting the proper MIME types for all resources
-|- style="background-color: #9EDB58;"
-| data-sort-value="15" | [[#X-Frame-Options|<span style="color: black;">X-Frame-Options</span>]]
-| style="text-align: center;" | P2
-| style="text-align: center;" | Easy
-| style="text-align: center;" | 5
-| Mandatory for all websites
-| Websites that don't use DENY or SAMEORIGIN must employ clickjacking defenses
-|- style="background-color: #E8E27A;"
-| data-sort-value="16" | [[#X-XSS-Protection|<span style="color: black;">X-XSS-Protection</span>]]
-| style="text-align: center;" | P4
-| style="text-align: center;" | Moderate
-| style="text-align: center;" | 12
-| Mandatory for all new websites<br>Recommended for existing websites
-| Manual testing should be done for existing websites, prior to implementation
-|}
-
-<div style="margin-left: 1.5em;"><sup style="font-size: .8em; position: relative; top: -.4em; vertical-align: baseline;">&dagger;</sup> Suggested order that administrators implement the web security guidelines. It is based on a combination of the security impact and the ease of implementation from an operational and developmental perspective.</div>
